# ksi

./: .gitignore  .gitmodules  CMakeLists.txt  PortAudioConfig.cmake
builtins/: CMakeLists.txt
builtins/kscarlet/: CMakeLists.txt  adsr.c  adsr.h  midiseg.c  midiseg.h  wavetable.c  wavetable.h
configure/: CMakeLists.txt  cache.h  configure.c
doc/: ksid.tex
editor/: main.rkt
ksictl/: graph-instance.ss  graph-prototype.ss  main.ss  node.ss  vec.ss
ksid/: CMakeLists.txt  cmd.c  cmd.h  cmd_queue.h  config.h  dag_members.h  dagedit.c  dagedit.h  dagedit_commit.c  dagedit_commit.h  data.h  ebr.c  ebr.h  engine.c  engine.h  events.h  inline_meta.h  linear_builtins.c  mempool.h  mvcc_utils.h  profile.c  profile.h  queue.c  queue.h  rbtree.h  resource.h  ring_buffer.c  ring_buffer.h  sem.h  spsc_buffer.h
ksid/cmd/: main.c
ksid/daemon/: rpc.c
ksid/io/: pa_io.c  pa_io.h
ksid/lcrq/: align.h  lcrq.c  lcrq.h
playground/: test.kl  test.mf
src/: CMakeLists.txt  a.out  cmd.c  cmd.h  cmd_queue.h  cond.h  dag.h  dag_members.h  dagedit.c  dagedit.h  dagedit_commit.c  dagedit_kernels.h  data.h  dummy_linenoise.h  engine.c  engine.h  err.c  err.h  events.h  inline_meta.c  inline_meta.h  linear_builtins.c  linear_builtins.h  mvcc_utils.h  queue.c  queue.h  rbtree.c  rbtree.h  resource.c  resource.h  ring_buffer.c  ring_buffer.h  sem.h  spsc_queue.h  test.prof  test0  util.h  vec.h
src/ctl/: main.c
src/daemon/: rpc.c
src/lcrq/: #hzdptr.c#  LICENSE  a.out  align.h  lcrq.c  lcrq.h  queue.h
tests/: CMakeLists.txt  test_dagedit.c  test_dagedit.c.re  test_mvcc_utils.c  test_mvcc_utils.c.re  test_queue.c  test_rbtree.c  test_rbtree.c.re
tests/ksicmd/: CMakeLists.txt  dag_op.inc  dag_op.kl  dag_op.l  dag_op_online.kl  dag_op_online.l  driver.c  init.l
