cmake_minimum_required(VERSION 3.13)
set(EXT_LIBS ${PORTAUDIO_LIBRARIES})
include_directories(. ${PORTAUDIO_INCLUDE_DIRS})
aux_source_directory(. CORE_SRCS)
aux_source_directory(lcrq LCRQ_SRCS)
aux_source_directory(linenoise LINENOISE_SRCS)
aux_source_directory(io IO_SRCS)
set(SRCS ${CORE_SRCS} ${LINENOISE_SRCS} ${IO_SRCS} ${LCRQ_SRCS})
add_library(ksi ${SRCS})
add_executable(ksicmd ./cmd/main.c)
aux_source_directory(daemon DAEMON_SRCS)
add_executable(ksid ${DAEMON_SRCS})
target_link_libraries(ksi ${EXT_LIBS} ${builtins_lib})
target_link_libraries(ksicmd ksi)
target_link_libraries(ksid ksi)
add_dependencies(ksi generate_config)
