cmake_minimum_required(VERSION 3.13)
include_directories(../src)
aux_source_directory(. TESTS_SRCS)
foreach(TEST_SRC ${TESTS_SRCS})
STRING(REGEX REPLACE "^\./" "" TEST_SRC ${TEST_SRC})
add_executable("${TEST_SRC}.ktest" ${TEST_SRC})
target_link_libraries("${TEST_SRC}.ktest" ksi)
add_dependencies("${TEST_SRC}.ktest" generate_config)
add_test(${TEST_SRC} "${TEST_SRC}.ktest")
file(READ "${TEST_SRC}.re" tre)
set_tests_properties(${TEST_SRC} PROPERTIES PASS_REGULAR_EXPRESSION ${tre})
endforeach(TEST_SRC ${TESTS_SRCS})
add_subdirectory(ksicmd)
